--- a/src/component/hero-page/TravelTogether.css
+++ b/src/component/hero-page/TravelTogether.css
@@ -93,6 +93,6 @@
   .hero-call,
   .hero-whatsapp {
     justify-content: center;
-    width: 100%;
+    width: 50%;
   }
 }
